add falttened files to  0_load_data

--- a/notebooks/01_Logistic_regression.ipynb
+++ b/notebooks/01_Logistic_regression.ipynb
@@ -18,101 +18,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "4fa3be68-3c57-41ac-b7a2-527c89ef0e38",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'build_or_load_binary_any_dataset' from 'Load_data.prepare_data' (/home/ahmed/Desktop/My_projects /Damage_Vision_project/notebooks/../src/Load_data/prepare_data.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mImportError\u001b[39m                               Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msys\u001b[39;00m\n\u001b[32m      4\u001b[39m sys.path.append(\u001b[33m\"\u001b[39m\u001b[33m../src\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mLoad_data\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mprepare_data\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m build_or_load_binary_any_dataset\n\u001b[32m      7\u001b[39m \u001b[38;5;66;03m# Start timing\u001b[39;00m\n\u001b[32m      8\u001b[39m start_time = time.time()\n",
+      "\u001b[31mImportError\u001b[39m: cannot import name 'build_or_load_binary_any_dataset' from 'Load_data.prepare_data' (/home/ahmed/Desktop/My_projects /Damage_Vision_project/notebooks/../src/Load_data/prepare_data.py)"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
+    "import sys\n",
+    "\n",
+    "sys.path.append(\"../src\")\n",
+    "from Load_data.prepare_data import build_or_load_binary_any_dataset\n",
     "\n",
     "# Start timing\n",
     "start_time = time.time()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "71c46a18-cc62-4564-aa5b-2918ef255f90",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import xml.etree.ElementTree as ET\n",
-    "\n",
-    "def parse_xml(xml_path):\n",
-    "    \"\"\"\n",
-    "    Parses an XML file containing image annotations and extracts labels associated with each image.\n",
-    "    This function reads an XML file with image metadata and polygon annotations, then creates\n",
-    "    a dictionary mapping image filenames to their corresponding labels.\n",
-    "    \n",
-    "    Parameters:\n",
-    "    -----------\n",
-    "    xml_path : str\n",
-    "        Path to the XML annotation file\n",
-    "        \n",
-    "    Returns:\n",
-    "    --------\n",
-    "    dict\n",
-    "        Dictionary where:\n",
-    "        - Keys: image filenames (strings)\n",
-    "        - Values: list of label strings for that image\n",
-    "        Returns empty dictionary if parsing fails\n",
-    "    \"\"\"\n",
-    "    try:\n",
-    "        tree = ET.parse(xml_path)\n",
-    "        root = tree.getroot()\n",
-    "        \n",
-    "        labels_per_image = {}\n",
-    "        \n",
-    "        for image in root.findall(\"image\"):\n",
-    "            image_name = image.get(\"name\")\n",
-    "            labels = []\n",
-    "            \n",
-    "            for poly in image.findall(\"polygon\"):\n",
-    "                labels.append(poly.get(\"label\"))\n",
-    "            \n",
-    "            labels_per_image[image_name] = labels\n",
-    "        \n",
-    "        return labels_per_image\n",
-    "        \n",
-    "    except ET.ParseError as e:\n",
-    "        print(f\"XML parsing error: {e}\")\n",
-    "        return {}\n",
-    "    except FileNotFoundError:\n",
-    "        print(f\"XML file not found: {xml_path}\")\n",
-    "        return {}\n",
-    "    except Exception as e:\n",
-    "        print(f\"Unexpected error: {e}\")\n",
-    "        return {}\n",
-    "\n",
-    "def label_Y(labels_per_image):\n",
-    "    \"\"\"\n",
-    "    Converts detailed label information into binary classification labels.\n",
-    "    \n",
-    "    Parameters:\n",
-    "    -----------\n",
-    "    labels_per_image : dict\n",
-    "        Dictionary returned by parse_xml()         \n",
-    "    Returns:\n",
-    "    --------\n",
-    "    dict\n",
-    "        Dictionary with binary labels:\n",
-    "        - Keys: image filenames (same as input)\n",
-    "        - Values: integer 0 or 1\n",
-    "          1: Image contains \"D_Building\" OR \"Debris\" label\n",
-    "          0: Image contains neither \"D_Building\" nor \"Debris\" labels\n",
-    "          \n",
-    "    Example:\n",
-    "    --------\n",
-    "    Input: {\"img1.jpg\": [\"D_Building\", \"Car\"], \"img2.jpg\": [\"Tree\", \"Road\"]}\n",
-    "    Output: {\"img1.jpg\": 1, \"img2.jpg\": 0}\n",
-    "    \"\"\"\n",
-    "    y_labels = {}\n",
-    "    for img, labels in labels_per_image.items():\n",
-    "        if \"D_Building\" in labels or \"Debris\" in labels:\n",
-    "            y_labels[img] = 1\n",
-    "        else:\n",
-    "            y_labels[img] = 0\n",
-    "    return y_labels"
    ]
   },
   {
@@ -129,6 +59,36 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "8444cade-1d18-4fda-a1f0-4be4e206b449",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'build_or_load_binary_any_dataset' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m X_train_org, Y_train, X_test_org, Y_test = \u001b[43mbuild_or_load_binary_any_dataset\u001b[49m(\n\u001b[32m      2\u001b[39m     cache_path=\u001b[33m\"\u001b[39m\u001b[33m../data/cache/eidseg_64x64_binary_any.h5\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m      3\u001b[39m     train_image_dir=\u001b[33m\"\u001b[39m\u001b[33m../EIDSeg_Dataset/data/train/images/default\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m      4\u001b[39m     test_image_dir =\u001b[33m\"\u001b[39m\u001b[33m../EIDSeg_Dataset/data/test/images/default\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m      5\u001b[39m     train_xml=\u001b[33m\"\u001b[39m\u001b[33m../EIDSeg_Dataset/data/train/train.xml\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m      6\u001b[39m     test_xml =\u001b[33m\"\u001b[39m\u001b[33m../EIDSeg_Dataset/data/test/test.xml\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m      7\u001b[39m     img_size=(\u001b[32m64\u001b[39m, \u001b[32m64\u001b[39m)\n\u001b[32m      8\u001b[39m )\n",
+      "\u001b[31mNameError\u001b[39m: name 'build_or_load_binary_any_dataset' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "X_train_org, Y_train, X_test_org, Y_test = build_or_load_binary_any_dataset(\n",
+    "    cache_path=\"../data/cache/eidseg_64x64_binary_any.h5\",\n",
+    "    train_image_dir=\"../EIDSeg_Dataset/data/train/images/default\",\n",
+    "    test_image_dir =\"../EIDSeg_Dataset/data/test/images/default\",\n",
+    "    train_xml=\"../EIDSeg_Dataset/data/train/train.xml\",\n",
+    "    test_xml =\"../EIDSeg_Dataset/data/test/test.xml\",\n",
+    "    img_size=(64, 64)\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b9fd3fea-db05-4a44-b44f-0f5cf70ca687",
    "metadata": {},
    "outputs": [],
    "source": [
