updated with h5 files loaders

--- a/notebooks/0_load_data.ipynb
+++ b/notebooks/0_load_data.ipynb
@@ -194,26 +194,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "f9ec5b49-f6b3-41ef-b283-a202b72ae5a3",
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "\"Unable to synchronously open object (object 'X_train' doesn't exist)\"",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43madd_flattened_views_to_cache\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43m../EIDSeg_Dataset/cache//eidseg_64x64_binary_any_flat.h5\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      2\u001b[39m add_flattened_views_to_cache(\u001b[33m\"\u001b[39m\u001b[33m../EIDSeg_Dataset/cache//eidseg_64x64_destroyed_cov30_flat.h5\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      3\u001b[39m build_flattened_cache(\n\u001b[32m      4\u001b[39m     source_cache_path=\u001b[33m\"\u001b[39m\u001b[33m../EIDSeg_Dataset/cache//eidseg_64x64_binary_any.h5\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m      5\u001b[39m     flat_cache_path=\u001b[33m\"\u001b[39m\u001b[33m../EIDSeg_Dataset/cache//eidseg_64x64_binary_any_flat.h5\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m      6\u001b[39m )\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 3\u001b[39m, in \u001b[36madd_flattened_views_to_cache\u001b[39m\u001b[34m(cache_path)\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34madd_flattened_views_to_cache\u001b[39m(cache_path):\n\u001b[32m      2\u001b[39m     \u001b[38;5;28;01mwith\u001b[39;00m h5py.File(cache_path, \u001b[33m\"\u001b[39m\u001b[33ma\u001b[39m\u001b[33m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m         X_train = \u001b[43mf\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mX_train\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m[:]\n\u001b[32m      4\u001b[39m         X_test  = f[\u001b[33m\"\u001b[39m\u001b[33mX_test\u001b[39m\u001b[33m\"\u001b[39m][:]\n\u001b[32m      6\u001b[39m         train_flat = X_train.reshape(X_train.shape[\u001b[32m0\u001b[39m], -\u001b[32m1\u001b[39m).T\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mh5py/_objects.pyx:54\u001b[39m, in \u001b[36mh5py._objects.with_phil.wrapper\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mh5py/_objects.pyx:55\u001b[39m, in \u001b[36mh5py._objects.with_phil.wrapper\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/My_projects /Damage_Vision_project/myenv1/lib/python3.12/site-packages/h5py/_hl/group.py:357\u001b[39m, in \u001b[36mGroup.__getitem__\u001b[39m\u001b[34m(self, name)\u001b[39m\n\u001b[32m    355\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mInvalid HDF5 object reference\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    356\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(name, (\u001b[38;5;28mbytes\u001b[39m, \u001b[38;5;28mstr\u001b[39m)):\n\u001b[32m--> \u001b[39m\u001b[32m357\u001b[39m     oid = \u001b[43mh5o\u001b[49m\u001b[43m.\u001b[49m\u001b[43mopen\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mid\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_e\u001b[49m\u001b[43m(\u001b[49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlapl\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_lapl\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    358\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m    359\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mAccessing a group is done with bytes or str, \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    360\u001b[39m                     \u001b[33m\"\u001b[39m\u001b[33mnot \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[33m\"\u001b[39m.format(\u001b[38;5;28mtype\u001b[39m(name)))\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mh5py/_objects.pyx:54\u001b[39m, in \u001b[36mh5py._objects.with_phil.wrapper\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mh5py/_objects.pyx:55\u001b[39m, in \u001b[36mh5py._objects.with_phil.wrapper\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mh5py/h5o.pyx:189\u001b[39m, in \u001b[36mh5py.h5o.open\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[31mKeyError\u001b[39m: \"Unable to synchronously open object (object 'X_train' doesn't exist)\""
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🛠️ Building FLATTENED cache\n",
+      "✅ Flattened cache saved to ../EIDSeg_Dataset/cache//eidseg_64x64_binary_any_flat.h5\n"
      ]
     }
    ],
@@ -226,16 +216,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "6463fadf-8c2e-4935-a95c-ea12d8c00c71",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🛠️ Building FLATTENED cache\n",
+      "✅ Flattened cache saved to ../EIDSeg_Dataset/cache//eidseg_64x64_destroyed_cov30_flat.h5\n"
+     ]
+    }
+   ],
    "source": [
     "build_flattened_cache(\n",
     "    source_cache_path=\"../EIDSeg_Dataset/cache//eidseg_64x64_destroyed_cov30.h5\",\n",
     "    flat_cache_path=\"../EIDSeg_Dataset/cache//eidseg_64x64_destroyed_cov30_flat.h5\"\n",
     ")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd92fc3a-1031-4b44-be45-6e5bdc5d549e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
