added genral eval_utils and visualization code

--- a/notebooks/01_Logistic_regression.ipynb
+++ b/notebooks/01_Logistic_regression.ipynb
@@ -441,6 +441,37 @@
     "\n",
     "print(f\"Time taken: {minutes} minutes and {seconds:.2f} seconds\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d76a7909-4d53-4fcf-a1c3-7e89b0f6f504",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'print_report' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[14]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mprint_report\u001b[49m(results)\n\u001b[32m      2\u001b[39m plot_costs(results.get(\u001b[33m\"\u001b[39m\u001b[33mcosts\u001b[39m\u001b[33m\"\u001b[39m, []), LR)\n",
+      "\u001b[31mNameError\u001b[39m: name 'print_report' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "print_report(results)\n",
+    "plot_costs(results.get(\"costs\", []), LR)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe450673-2b24-4e8b-995d-814f2d530dc4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
