final touches on logstic regression

--- a/notebooks/01_Logistic_regression.ipynb
+++ b/notebooks/01_Logistic_regression.ipynb
@@ -444,25 +444,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "d76a7909-4d53-4fcf-a1c3-7e89b0f6f504",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "\n",
+    "sys.path.append(\"../src\")\n",
+    "from eval_utils import *\n",
+    "from visualization import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "f5210f91-b5da-4c5c-aeb1-1105b405c0a5",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== Model Evaluation Report ===\n",
+      "B                   : 0.3238\n",
+      "Learning Rate       : 0.0010\n"
+     ]
+    },
+    {
      "ename": "NameError",
-     "evalue": "name 'print_report' is not defined",
+     "evalue": "name 'LR' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[14]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mprint_report\u001b[49m(results)\n\u001b[32m      2\u001b[39m plot_costs(results.get(\u001b[33m\"\u001b[39m\u001b[33mcosts\u001b[39m\u001b[33m\"\u001b[39m, []), LR)\n",
-      "\u001b[31mNameError\u001b[39m: name 'print_report' is not defined"
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[18]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m print_report(logistic_regression_model)\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m plot_costs(logistic_regression_model.get(\u001b[33m\"\u001b[39m\u001b[33mcosts\u001b[39m\u001b[33m\"\u001b[39m, []), \u001b[43mLR\u001b[49m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'LR' is not defined"
      ]
     }
    ],
    "source": [
-    "print_report(results)\n",
-    "plot_costs(results.get(\"costs\", []), LR)"
+    "print_report(logistic_regression_model)\n",
+    "plot_costs(logistic_regression_model.get(\"costs\", []), LR)"
    ]
   },
   {
