--- a/notebooks/03_L_layer_model.ipynb
+++ b/notebooks/03_L_layer_model.ipynb
@@ -117,11 +117,83 @@
     }
    ],
    "source": [
-    "train_x = X_train_org.reshape(X_train_org.shape[0], -1).T\n",
-    "test_x = X_test_org.reshape(X_test_org.shape[0], -1).T\n",
+    "import numpy as np\n",
+    "import h5py \n",
+    "import sys\n",
+    "sys.path.append(\"../src\")\n",
+    "from NN_1_hidden_layer_02.NN_1_hidden_layer_model import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "0ef5b825-fa44-41a5-b107-a6687b4d6652",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(12288, 2612) (1, 2612)\n",
+      "(12288, 327) (1, 327)\n"
+     ]
+    }
+   ],
+   "source": [
+    "with h5py.File(\"../EIDSeg_Dataset/cache/eidseg_64x64_destroyed_cov30.h5\", \"r\") as f:\n",
+    "    X_train_org = f[\"X_train\"][:]\n",
+    "    Y_train_org = f[\"Y_train\"][:]\n",
+    "    X_test_org  = f[\"X_test\"][:]\n",
+    "    Y_test_org  = f[\"Y_test\"][:]\n",
     "\n",
-    "print(train_x.shape, Y_train_org.shape)\n",
-    "print(test_x.shape, Y_test_org.shape)"
+    "m_train = X_train_org.shape[0]\n",
+    "m_test = X_test_org.shape[0]\n",
+    "num_px =X_train_org.shape[1]\n",
+    "\n",
+    "print (\"Number of training examples: m_train = \" + str(m_train))\n",
+    "print (\"Number of testing examples: m_test = \" + str(m_test))\n",
+    "print (\"Height/Width of each image: num_px = \" + str(num_px))\n",
+    "print (\"Each image is of size: (\" + str(num_px) + \", \" + str(num_px) + \", 3)\")\n",
+    "print (\"train_set_x shape: \" + str(X_train_org.shape))\n",
+    "print (\"train_set_y shape: \" + str(Y_train_org.shape))\n",
+    "print (\"test_set_x shape: \" + str(X_test_org.shape))\n",
+    "print (\"test_set_y shape: \" + str(Y_test_org.shape))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "933f3a05-6691-41c5-95ff-a64e2493a727",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(12288, 2612) (1, 2612)\n",
+      "(12288, 327) (1, 327)\n"
+     ]
+    }
+   ],
+   "source": [
+    "with h5py.File(\"../EIDSeg_Dataset/cache/eidseg_64x64_destroyed_cov30_flat.h5\", \"r\") as f:\n",
+    "    X_train_org = f[\"X_train\"][:]\n",
+    "    Y_train_org = f[\"Y_train\"][:]\n",
+    "    X_test_org  = f[\"X_test\"][:]\n",
+    "    Y_test_org  = f[\"Y_test\"][:]\n",
+    "\n",
+    "m_train = X_train_org.shape[0]\n",
+    "m_test = X_test_org.shape[0]\n",
+    "num_px =X_train_org.shape[1]\n",
+    "\n",
+    "print (\"Number of training examples: m_train = \" + str(m_train))\n",
+    "print (\"Number of testing examples: m_test = \" + str(m_test))\n",
+    "print (\"Height/Width of each image: num_px = \" + str(num_px))\n",
+    "print (\"Each image is of size: (\" + str(num_px) + \", \" + str(num_px) + \", 3)\")\n",
+    "print (\"train_set_x shape: \" + str(X_train_org.shape))\n",
+    "print (\"train_set_y shape: \" + str(Y_train_org.shape))\n",
+    "print (\"test_set_x shape: \" + str(X_test_org.shape))\n",
+    "print (\"test_set_y shape: \" + str(Y_test_org.shape))"
    ]
   },
   {
