--- a/notebooks/03_L_layer_model.ipynb
+++ b/notebooks/03_L_layer_model.ipynb
@@ -277,6 +277,101 @@
     "print_report(parameters)\n",
     "plot_costs(costs)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea6b040d-9c52-4c59-9dba-d2846a411e9b",
+   "metadata": {},
+   "source": [
+    "# Let's try with Learning decays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3189d4b8-cfe8-40dd-a8a0-b81e12703c23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def r_schedule(i):\n",
+    "    if i < 500:\n",
+    "        return 0.008\n",
+    "    elif i < 1000:\n",
+    "        return 0.001\n",
+    "    elif i < 1500:\n",
+    "        return 0.0001\n",
+    "    elif i < 2000\n",
+    "        return 0.00001\n",
+    "    else:\n",
+    "        return 0.01\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "733c586a-4d23-4762-aea6-6828a865a448",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def L_layer_model(X, Y, layers_dims, learning_rate = 0.0075, num_iterations = 3000, print_cost=False, X_test=None, Y_test=None):\n",
+    "    \"\"\"\n",
+    "    Implements a L-layer neural network: [LINEAR->RELU]*(L-1)->LINEAR->SIGMOID.\n",
+    "    \n",
+    "    Arguments:\n",
+    "    X -- input data, of shape (n_x, number of examples)\n",
+    "    Y -- true \"label\" vector (containing 1 if cat, 0 if non-cat), of shape (1, number of examples)\n",
+    "    layers_dims -- list containing the input size and each layer size, of length (number of layers + 1).\n",
+    "    learning_rate -- learning rate of the gradient descent update rule\n",
+    "    num_iterations -- number of iterations of the optimization loop\n",
+    "    print_cost -- if True, it prints the cost every 100 steps\n",
+    "    \n",
+    "    Returns:\n",
+    "    parameters -- parameters learnt by the model. They can then be used to predict.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # np.random.seed(1)\n",
+    "    costs = []                         # keep track of cost\n",
+    "    \n",
+    "    # Parameters initialization.\n",
+    "\n",
+    "    parameters = initialize_parameters_deep(layers_dims)\n",
+    "        \n",
+    "    # Loop (gradient descent)\n",
+    "    for i in range(0, num_iterations):\n",
+    "\n",
+    "        ##update learnign rate digital\n",
+    "        learning_rate = lr_schedule(i)\n",
+    "        \n",
+    "        # Forward propagation: [LINEAR -> RELU]*(L-1) -> LINEAR -> SIGMOID.\n",
+    "        AL, caches = L_model_forward(X, parameters)\n",
+    "                \n",
+    "        # Compute cost.\n",
+    "        cost = compute_cost(AL,Y)\n",
+    "            \n",
+    "        # Backward propagation.\n",
+    "        grads = L_model_backward(AL, Y, caches)\n",
+    "        \n",
+    "        # Update parameters.\n",
+    "\n",
+    "        parameters = update_parameters(parameters, grads, learning_rate)\n",
+    "                        \n",
+    "        # Print the cost every 100 iterations and for the last iteration\n",
+    "        if print_cost and (i % 100 == 0 or i == num_iterations - 1):\n",
+    "            print(\"Cost after iteration {}: {}\".format(i, np.squeeze(cost)))\n",
+    "        if i % 100 == 0:\n",
+    "            costs.append(cost)\n",
+    "    if X_test is not None and Y_test is not None:\n",
+    "        train_pred = predict(train_x,parameters)\n",
+    "        test_pred = predict(test_x, parameters)\n",
+    "        train_acc = accuracy(train_pred, train_y)\n",
+    "        test_acc = accuracy(test_pred, test_y)\n",
+    "        print(f\"Final train accuracy: {train_acc:.2f}%\")\n",
+    "        print(f\"Final test accuracy:  {test_acc:.2f}%\")\n",
+    "\n",
+    "    \n",
+    "    return parameters, costs"
+   ]
   }
  ],
  "metadata": {
