add leaening rate decay algoerthim

--- a/notebooks/03_L_layer_model.ipynb
+++ b/notebooks/03_L_layer_model.ipynb
@@ -372,6 +372,30 @@
     "    \n",
     "    return parameters, costs"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4763d6fb-6b76-47f7-a3e5-3318a4bb874c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parameters, costs = L_layer_model(train_x, train_y, layers_dims, learning_rate = 0.008,num_iterations = 3500, print_cost = True, X_test=test_x, Y_test=Y_test_org)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03db9d79-1f83-48e1-874a-19d4ad79efc0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from eval_utils import *\n",
+    "from visualization import *\n",
+    "\n",
+    "print_report(parameters)\n",
+    "plot_costs(costs)"
+   ]
   }
  ],
  "metadata": {
