--- a/notebooks/03_L_layer_model.ipynb
+++ b/notebooks/03_L_layer_model.ipynb
@@ -457,8 +457,16 @@
    "id": "2956f3df-e60f-4f84-81ba-c948991aa817",
    "metadata": {},
    "source": [
-    "#It didn't do much so i think the problem is with the depth of the NN is not enough to recogno"
+    "# **It didn't do much so i think the problem is with the depth of the NN is not enough to recognize damaged buildings**"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "407830fe-7470-4239-8f09-650afd45804a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
