update the final model

--- a/notebooks/4_Optimized_Model.ipynb
+++ b/notebooks/4_Optimized_Model.ipynb
@@ -52,6 +52,62 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "bd2b4b44-6618-478f-b0a2-0472aa6d6665",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import h5py \n",
+    "import sys\n",
+    "sys.path.append(\"../src\")\n",
+    "#from L_layer_model_03.L_layer_model import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "3f475d2f-3c28-4279-8781-cbeffd231d07",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of training examples: m_train = 2612\n",
+      "Number of testing examples: m_test = 327\n",
+      "Height/Width of each image: num_px = 64\n",
+      "Each image is of size: (64, 64, 3)\n",
+      "train_set_x shape: (2612, 64, 64, 3)\n",
+      "train_set_y shape: (1, 2612)\n",
+      "test_set_x shape: (327, 64, 64, 3)\n",
+      "test_set_y shape: (1, 327)\n"
+     ]
+    }
+   ],
+   "source": [
+    "with h5py.File(\"../EIDSeg_Dataset/cache/eidseg_64x64_binary_any.h5\", \"r\") as f:\n",
+    "    X_train_org = f[\"X_train\"][:]\n",
+    "    Y_train_org = f[\"Y_train\"][:]\n",
+    "    X_test_org  = f[\"X_test\"][:]\n",
+    "    Y_test_org  = f[\"Y_test\"][:]\n",
+    "\n",
+    "m_train = X_train_org.shape[0]\n",
+    "m_test = X_test_org.shape[0]\n",
+    "num_px =X_train_org.shape[1]\n",
+    "\n",
+    "print (\"Number of training examples: m_train = \" + str(m_train))\n",
+    "print (\"Number of testing examples: m_test = \" + str(m_test))\n",
+    "print (\"Height/Width of each image: num_px = \" + str(num_px))\n",
+    "print (\"Each image is of size: (\" + str(num_px) + \", \" + str(num_px) + \", 3)\")\n",
+    "print (\"train_set_x shape: \" + str(X_train_org.shape))\n",
+    "print (\"train_set_y shape: \" + str(Y_train_org.shape))\n",
+    "print (\"test_set_x shape: \" + str(X_test_org.shape))\n",
+    "print (\"test_set_y shape: \" + str(Y_test_org.shape))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "2c867baa-be67-47fc-b762-59fcf6120a30",
    "metadata": {},
@@ -68,24 +124,24 @@
     }
    ],
    "source": [
-    "labels_train = parse_destroyed_with_size_check(\"../EIDSeg_Dataset/data/train/train.xml\", min_coverage=0.3)\n",
-    "labels_test  = parse_destroyed_with_size_check(\"../EIDSeg_Dataset/data/test/test.xml\",  min_coverage=0.3)\n",
+    "# labels_train = parse_destroyed_with_size_check(\"../EIDSeg_Dataset/data/train/train.xml\", min_coverage=0.3)\n",
+    "# labels_test  = parse_destroyed_with_size_check(\"../EIDSeg_Dataset/data/test/test.xml\",  min_coverage=0.3)\n",
     "\n",
-    "X_train_org, ordered_filenames_train = load_and_resize_images(\"../EIDSeg_Dataset/data/train/images/default\", target_size=(64,64))\n",
-    "X_test_org,  ordered_filenames_test  = load_and_resize_images(\"../EIDSeg_Dataset/data/test/images/default\",  target_size=(64,64))\n",
+    "# X_train_org, ordered_filenames_train = load_and_resize_images(\"../EIDSeg_Dataset/data/train/images/default\", target_size=(64,64))\n",
+    "# X_test_org,  ordered_filenames_test  = load_and_resize_images(\"../EIDSeg_Dataset/data/test/images/default\",  target_size=(64,64))\n",
     "\n",
-    "Y_train_org = build_label_array(ordered_filenames_train, labels_train)   # shape (n_train,)\n",
-    "Y_test_org  = build_label_array(ordered_filenames_test,  labels_test)    # shape (n_test,)\n",
+    "# Y_train_org = build_label_array(ordered_filenames_train, labels_train)   # shape (n_train,)\n",
+    "# Y_test_org  = build_label_array(ordered_filenames_test,  labels_test)    # shape (n_test,)\n",
     "\n",
-    "# quick sanity checks\n",
-    "print(\"Train positive ratio:\", Y_train_org.mean(), \"n_train:\", Y_train_org.shape[0])\n",
-    "print(\"Test  positive ratio:\", Y_test_org.mean(),  \"n_test:\",  Y_test_org.shape[0])"
+    "# # quick sanity checks\n",
+    "# print(\"Train positive ratio:\", Y_train_org.mean(), \"n_train:\", Y_train_org.shape[0])\n",
+    "# print(\"Test  positive ratio:\", Y_test_org.mean(),  \"n_test:\",  Y_test_org.shape[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "2d128233-0e35-43ce-bc87-9c19bc96fc91",
+   "execution_count": 14,
+   "id": "3ef000b4-397a-4350-beda-80b0ece48d82",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "17cb8a94-f644-4ed6-8624-6948a292ba87",
    "metadata": {},
    "outputs": [
@@ -135,6 +191,47 @@
    ],
    "source": [
     "#layers_dims = [12288, 64, 32, 16, 1] \n",
+    "layers_dims = [12288, 128, 64, 32, 1]  # try modest sizes for FC net\n",
+    "params, costs = L_layer_model_mini_batch(train_x, train_y, layers_dims,\n",
+    "                              learning_rate=0.01,\n",
+    "                              num_epochs=400,\n",
+    "                              mini_batch_size=64,\n",
+    "                              print_cost=True,\n",
+    "                              seed=1,\n",
+    "                              init=\"he\")\n",
+    "\n",
+    "# evaluate\n",
+    "preds_train = predict(train_x, params)\n",
+    "acc_train = np.mean(preds_train == train_y) * 100\n",
+    "print(\"Train accuracy:\", acc_train)\n",
+    "\n",
+    "preds_test = predict(test_x, params)\n",
+    "acc_test = np.mean(preds_test == test_y) * 100\n",
+    "print(\"Test accuracy:\", acc_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "595e64fc-cdb8-4669-b121-db1c0ee8b91d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0/400 - cost: 0.617393\n",
+      "Epoch 40/400 - cost: 0.405647\n",
+      "Epoch 80/400 - cost: 0.229039\n",
+      "Epoch 120/400 - cost: 0.152542\n",
+      "Epoch 160/400 - cost: 0.006444\n",
+      "Epoch 200/400 - cost: 0.002306\n"
+     ]
+    }
+   ],
+   "source": [
+    "#layers_dims = [12288, 64, 32, 16, 1] \n",
+    "# test with h5\n",
     "layers_dims = [12288, 128, 64, 32, 1]  # try modest sizes for FC net\n",
     "params, costs = L_layer_model_mini_batch(train_x, train_y, layers_dims,\n",
     "                              learning_rate=0.01,\n",
