--- a/notebooks/4_Optimized_Model.ipynb
+++ b/notebooks/4_Optimized_Model.ipynb
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "id": "3ef000b4-397a-4350-beda-80b0ece48d82",
    "metadata": {},
    "outputs": [
@@ -154,10 +154,19 @@
     }
    ],
    "source": [
-    "train_x = X_train_org.reshape(X_train_org.shape[0], -1).T\n",
-    "train_y = Y_train_org.reshape(1,-1)\n",
-    "test_x = X_test_org.reshape(X_test_org.shape[0], -1).T\n",
-    "test_y = Y_test_org.reshape(1,-1)\n",
+    "# train_x = X_train_org.reshape(X_train_org.shape[0], -1).T\n",
+    "# train_y = Y_train_org.reshape(1,-1)\n",
+    "# # test_x = X_test_org.reshape(X_test_org.shape[0], -1).T\n",
+    "# test_y = Y_test_org.reshape(1,-1)\n",
+    "\n",
+    "# train_x = X_train_org.reshape(X_train_org.shape[0], -1).T / 255.0\n",
+    "# test_x  = X_test_org.reshape(X_test_org.shape[0],  -1).T / 255.0\n",
+    "train_x = (X_train_org.reshape(X_train_org.shape[0], -1).T / 255.0).astype(np.float64)\n",
+    "train_y = Y_train_org.reshape(1, -1)\n",
+    "\n",
+    "test_x  = (X_test_org.reshape(X_test_org.shape[0], -1).T / 255.0).astype(np.float64)\n",
+    "test_y  = Y_test_org.reshape(1, -1)\n",
+    "\n",
     "\n",
     "\n",
     "print(train_x.shape, train_y.shape)\n",
@@ -212,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "595e64fc-cdb8-4669-b121-db1c0ee8b91d",
    "metadata": {},
    "outputs": [
@@ -220,12 +229,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0/400 - cost: 0.617393\n",
-      "Epoch 40/400 - cost: 0.405647\n",
-      "Epoch 80/400 - cost: 0.229039\n",
-      "Epoch 120/400 - cost: 0.152542\n",
-      "Epoch 160/400 - cost: 0.006444\n",
-      "Epoch 200/400 - cost: 0.002306\n"
+      "Epoch 0/300 - cost: 0.681399\n",
+      "Epoch 30/300 - cost: 0.604641\n",
+      "Epoch 60/300 - cost: 0.604518\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[23]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m#layers_dims = [12288, 64, 32, 16, 1] \u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;66;03m# test with h5\u001b[39;00m\n\u001b[32m      3\u001b[39m layers_dims = [\u001b[32m12288\u001b[39m, \u001b[32m128\u001b[39m, \u001b[32m64\u001b[39m, \u001b[32m32\u001b[39m, \u001b[32m1\u001b[39m]  \u001b[38;5;66;03m# try modest sizes for FC net\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m params, costs = \u001b[43mL_layer_model_mini_batch\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrain_x\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrain_y\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlayers_dims\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      5\u001b[39m \u001b[43m                              \u001b[49m\u001b[43mlearning_rate\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m0.01\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m      6\u001b[39m \u001b[43m                              \u001b[49m\u001b[43mnum_epochs\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m300\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m      7\u001b[39m \u001b[43m                              \u001b[49m\u001b[43mmini_batch_size\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m64\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m      8\u001b[39m \u001b[43m                              \u001b[49m\u001b[43mprint_cost\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[32m      9\u001b[39m \u001b[43m                              \u001b[49m\u001b[43mseed\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m4\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m     10\u001b[39m \u001b[43m                              \u001b[49m\u001b[43minit\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mhe\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m     12\u001b[39m \u001b[38;5;66;03m# evaluate\u001b[39;00m\n\u001b[32m     13\u001b[39m preds_train = predict(train_x, params)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/My_projects /Damage_Vision_project/notebooks/mini_batch_model.py:220\u001b[39m, in \u001b[36mL_layer_model_mini_batch\u001b[39m\u001b[34m(X_input, Y_input, layers_dims, learning_rate, num_epochs, mini_batch_size, print_cost, seed, init)\u001b[39m\n\u001b[32m    218\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m minibatch \u001b[38;5;129;01min\u001b[39;00m minibatches:\n\u001b[32m    219\u001b[39m     (minibatch_X, minibatch_Y) = minibatch\n\u001b[32m--> \u001b[39m\u001b[32m220\u001b[39m     AL, caches = \u001b[43mL_model_forward\u001b[49m\u001b[43m(\u001b[49m\u001b[43mminibatch_X\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparameters\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    221\u001b[39m     cost = compute_cost(AL, minibatch_Y)\n\u001b[32m    222\u001b[39m     epoch_cost += cost * minibatch_X.shape[\u001b[32m1\u001b[39m]  \u001b[38;5;66;03m# accumulate weighted by examples\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/My_projects /Damage_Vision_project/notebooks/mini_batch_model.py:79\u001b[39m, in \u001b[36mL_model_forward\u001b[39m\u001b[34m(X, parameters)\u001b[39m\n\u001b[32m     77\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m l \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[32m1\u001b[39m, L):\n\u001b[32m     78\u001b[39m     A_prev = A\n\u001b[32m---> \u001b[39m\u001b[32m79\u001b[39m     A, cache = \u001b[43mlinear_activation_forward\u001b[49m\u001b[43m(\u001b[49m\u001b[43mA_prev\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparameters\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mW\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m+\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43ml\u001b[49m\u001b[43m)\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparameters\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mb\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m+\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43ml\u001b[49m\u001b[43m)\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mrelu\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m     80\u001b[39m     caches.append(cache)\n\u001b[32m     81\u001b[39m AL, cache = linear_activation_forward(A, parameters[\u001b[33m'\u001b[39m\u001b[33mW\u001b[39m\u001b[33m'\u001b[39m + \u001b[38;5;28mstr\u001b[39m(L)], parameters[\u001b[33m'\u001b[39m\u001b[33mb\u001b[39m\u001b[33m'\u001b[39m + \u001b[38;5;28mstr\u001b[39m(L)], \u001b[33m\"\u001b[39m\u001b[33msigmoid\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/My_projects /Damage_Vision_project/notebooks/mini_batch_model.py:63\u001b[39m, in \u001b[36mlinear_activation_forward\u001b[39m\u001b[34m(A_prev, W, b, activation)\u001b[39m\n\u001b[32m     62\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mlinear_activation_forward\u001b[39m(A_prev: np.ndarray, W: np.ndarray, b: np.ndarray, activation: \u001b[38;5;28mstr\u001b[39m):\n\u001b[32m---> \u001b[39m\u001b[32m63\u001b[39m     Z, linear_cache = \u001b[43mlinear_forward\u001b[49m\u001b[43m(\u001b[49m\u001b[43mA_prev\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mW\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mb\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     64\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m activation == \u001b[33m\"\u001b[39m\u001b[33msigmoid\u001b[39m\u001b[33m\"\u001b[39m:\n\u001b[32m     65\u001b[39m         A, activation_cache = sigmoid(Z)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/My_projects /Damage_Vision_project/notebooks/mini_batch_model.py:58\u001b[39m, in \u001b[36mlinear_forward\u001b[39m\u001b[34m(A, W, b)\u001b[39m\n\u001b[32m     57\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mlinear_forward\u001b[39m(A: np.ndarray, W: np.ndarray, b: np.ndarray) -> Tuple[np.ndarray, Tuple[np.ndarray, np.ndarray, np.ndarray]]:\n\u001b[32m---> \u001b[39m\u001b[32m58\u001b[39m     Z = \u001b[43mW\u001b[49m\u001b[43m.\u001b[49m\u001b[43mdot\u001b[49m\u001b[43m(\u001b[49m\u001b[43mA\u001b[49m\u001b[43m)\u001b[49m + b\n\u001b[32m     59\u001b[39m     cache = (A, W, b)\n\u001b[32m     60\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m Z, cache\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m: "
      ]
     }
    ],
@@ -235,10 +256,10 @@
     "layers_dims = [12288, 128, 64, 32, 1]  # try modest sizes for FC net\n",
     "params, costs = L_layer_model_mini_batch(train_x, train_y, layers_dims,\n",
     "                              learning_rate=0.01,\n",
-    "                              num_epochs=400,\n",
+    "                              num_epochs=300,\n",
     "                              mini_batch_size=64,\n",
     "                              print_cost=True,\n",
-    "                              seed=1,\n",
+    "                              seed=4,\n",
     "                              init=\"he\")\n",
     "\n",
     "# evaluate\n",
