added 32 by 32 h5py file

--- a/notebooks/0_load_data.ipynb
+++ b/notebooks/0_load_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "18910a1f-cd3d-4106-a96f-eb9267529cb8",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "11ef5cb4-b67b-466e-8aa6-f6fe9d1fff77",
    "metadata": {},
    "outputs": [],
@@ -237,9 +237,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c8d0d80a-6be3-487d-a154-abef72ed90b8",
+   "metadata": {},
+   "source": [
+    "# I wanna try with smaller image size it might speed up the leaning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "453f5805-58bb-4265-843c-a48cd5455c4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🛠️ Building BINARY_ANY dataset\n",
+      "Final X shape: (2612, 32, 32, 3)\n",
+      "Final X shape: (327, 32, 32, 3)\n",
+      "✅ Dataset built and saved to ../EIDSeg_Dataset/cache/eidseg_32x32_binary_any.h5\n"
+     ]
+    }
+   ],
+   "source": [
+    "build_binary_any_dataset(\n",
+    "    cache_path=\"../EIDSeg_Dataset/cache/eidseg_32x32_binary_any.h5\",\n",
+    "    train_image_dir=\"../EIDSeg_Dataset/data/train/images/default\",\n",
+    "    test_image_dir =\"../EIDSeg_Dataset/data/test/images/default\",\n",
+    "    train_xml=\"../EIDSeg_Dataset/data/train/train.xml\",\n",
+    "    test_xml =\"../EIDSeg_Dataset/data/test/test.xml\",\n",
+    "    img_size=(32, 32)\n",
+    ")\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd92fc3a-1031-4b44-be45-6e5bdc5d549e",
+   "id": "4d6ffbba-7185-418b-be1e-71acd3f50437",
    "metadata": {},
    "outputs": [],
    "source": []
