03_L_layer_model edites

--- a/notebooks/0_load_data.ipynb
+++ b/notebooks/0_load_data.ipynb
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "342c46f6-b883-42ab-83e1-50a507503f87",
    "metadata": {},
    "outputs": [],
@@ -274,8 +274,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "4d6ffbba-7185-418b-be1e-71acd3f50437",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🛠️ Building FLATTENED cache\n",
+      "✅ Flattened cache saved to ../EIDSeg_Dataset/cache//eidseg_32x32_binary_any_flat.h5\n"
+     ]
+    }
+   ],
+   "source": [
+    "build_flattened_cache(\n",
+    "    source_cache_path=\"../EIDSeg_Dataset/cache//eidseg_32x32_binary_any.h5\",\n",
+    "    flat_cache_path=\"../EIDSeg_Dataset/cache//eidseg_32x32_binary_any_flat.h5\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ad86c97-43a5-438e-8968-7304b7dbe3ec",
    "metadata": {},
    "outputs": [],
    "source": []
