added a balanced data set with 40% damaged images only is equal 1 others 0

--- a/notebooks/0_load_data.ipynb
+++ b/notebooks/0_load_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "18910a1f-cd3d-4106-a96f-eb9267529cb8",
    "metadata": {},
    "outputs": [],
@@ -296,11 +296,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "1ad86c97-43a5-438e-8968-7304b7dbe3ec",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def build_destroyed_coverage_dataset_eleminate(\n",
+    "    cache_path,\n",
+    "    train_image_dir,\n",
+    "    test_image_dir,\n",
+    "    train_xml,\n",
+    "    test_xml,\n",
+    "    img_size=(64, 64),\n",
+    "    min_coverage=0.4\n",
+    "):\n",
+    "    os.makedirs(os.path.dirname(cache_path), exist_ok=True)\n",
+    "\n",
+    "    print(\"🛠️ Building DESTROYED_COVERAGE dataset\")\n",
+    "\n",
+    "    # -------- TRAIN --------\n",
+    "    X_train, fn_train = load_and_resize_images(train_image_dir, img_size)\n",
+    "    labels_train = parse_destroyed_with_size_check_eliminate_less(\n",
+    "        train_xml, min_coverage=min_coverage\n",
+    "    )\n",
+    "    Y_train, kept_train_files = build_label_array_eliminated(fn_train, labels_train)\n",
+    "    X_train = filter_X_by_filenames(X_train,fn_train, kept_train_files)\n",
+    "\n",
+    "    # -------- TEST --------\n",
+    "    X_test, fn_test = load_and_resize_images(test_image_dir, img_size)\n",
+    "    labels_test = parse_destroyed_with_size_check_eliminate_less(\n",
+    "        test_xml, min_coverage=min_coverage\n",
+    "    )\n",
+    "    Y_test, kept_test_files  = build_label_array_eliminated(fn_test, labels_test)\n",
+    "    X_test= filter_X_by_filenames(X_test,fn_test, kept_test_files)\n",
+    "\n",
+    "    with h5py.File(cache_path, \"w\") as f:\n",
+    "        f.create_dataset(\"X_train\", data=X_train, compression=\"gzip\")\n",
+    "        f.create_dataset(\"Y_train\", data=Y_train, compression=\"gzip\")\n",
+    "        f.create_dataset(\"X_test\",  data=X_test,  compression=\"gzip\")\n",
+    "        f.create_dataset(\"Y_test\",  data=Y_test,  compression=\"gzip\")\n",
+    "\n",
+    "    print(\"Train positives:\", int(np.sum(Y_train)))\n",
+    "    print(\"Train negatives:\", Y_train.shape[1] - int(np.sum(Y_train)))\n",
+    "    \n",
+    "    print(\"Test positives:\", int(np.sum(Y_test)))\n",
+    "    print(\"Test negatives:\", Y_test.shape[1] - int(np.sum(Y_test)))\n",
+    "    \n",
+    "    print(\"X_train shape:\", X_train.shape)\n",
+    "    print(\"Y_train shape:\", Y_train.shape)\n",
+    "    \n",
+    "    print(\"X_test shape:\", X_test.shape)\n",
+    "    print(\"Y_test shape:\", Y_test.shape)\n",
+    "    print(f\"✅ Dataset built and saved to {cache_path}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "b4cbd069-324b-4a6f-8b5c-da09955c5849",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🛠️ Building DESTROYED_COVERAGE dataset\n",
+      "Final X shape: (2612, 64, 64, 3)\n",
+      "Final X shape: (327, 64, 64, 3)\n",
+      "Train positives: 906\n",
+      "Train negatives: 765\n",
+      "Test positives: 125\n",
+      "Test negatives: 85\n",
+      "X_train shape: (1671, 64, 64, 3)\n",
+      "Y_train shape: (1, 1671)\n",
+      "X_test shape: (210, 64, 64, 3)\n",
+      "Y_test shape: (1, 210)\n",
+      "✅ Dataset built and saved to ../EIDSeg_Dataset/cache//eidseg_64x64_destroyed_cov40_eliminated.h5\n"
+     ]
+    }
+   ],
+   "source": [
+    "build_destroyed_coverage_dataset_eleminate(\n",
+    "    cache_path=\"../EIDSeg_Dataset/cache//eidseg_64x64_destroyed_cov40_eliminated.h5\",\n",
+    "    train_image_dir=\"../EIDSeg_Dataset/data/train/images/default\",\n",
+    "    test_image_dir =\"../EIDSeg_Dataset/data/test/images/default\",\n",
+    "    train_xml=\"../EIDSeg_Dataset/data/train/train.xml\",\n",
+    "    test_xml =\"../EIDSeg_Dataset/data/test/test.xml\",\n",
+    "    img_size=(64, 64),\n",
+    "    min_coverage=0.4\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09390166-ac4e-487a-b76f-e0948af2f921",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "build_flattened_cache(\n",
+    "    source_cache_path=\"../EIDSeg_Dataset/cache//eidseg_32x32_binary_any.h5\",\n",
+    "    flat_cache_path=\"../EIDSeg_Dataset/cache//eidseg_32x32_binary_any_flat.h5\"\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
