changes in model 3

--- a/notebooks/0_load_data.ipynb
+++ b/notebooks/0_load_data.ipynb
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "342c46f6-b883-42ab-83e1-50a507503f87",
    "metadata": {},
    "outputs": [],
@@ -389,16 +389,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "09390166-ac4e-487a-b76f-e0948af2f921",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🛠️ Building FLATTENED cache\n",
+      "✅ Flattened cache saved to ../EIDSeg_Dataset/cache//eidseg_64x64_destroyed_cov40_eliminated_flat.h5\n"
+     ]
+    }
+   ],
    "source": [
     "build_flattened_cache(\n",
-    "    source_cache_path=\"../EIDSeg_Dataset/cache//eidseg_32x32_binary_any.h5\",\n",
-    "    flat_cache_path=\"../EIDSeg_Dataset/cache//eidseg_32x32_binary_any_flat.h5\"\n",
+    "    source_cache_path=\"../EIDSeg_Dataset/cache//eidseg_64x64_destroyed_cov40_eliminated.h5\",\n",
+    "    flat_cache_path=\"../EIDSeg_Dataset/cache//eidseg_64x64_destroyed_cov40_eliminated_flat.h5\"\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9639a8bb-6477-434c-8527-12895a526bf8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
